2010-11-01 Braden McDaniel  <braden@endoframe.com>

	Boost.Filesystem headers include inline functions that call
	Boost.System functions.  Programs/libraries that use
	Boost.Filesystem need to link with libboost_system as well as
	libboost_filesystem.  The Mac OS X linker seems to be the only one
	that actually cares about this detail.

	* src/Makefile.am
	(libopenvrml_libopenvrml_la_LIBADD): Link with libboost_system.
	(local_libopenvrml_dl_la_LIBADD): Link with libboost_system.

2010-09-19 Braden McDaniel  <braden@endoframe.com>

	SpiderMonkey included in the forthcoming XULRunner 1.9.3 removes
	JS_AddRoot and JS_RemoveRoot and replaces them with type-specific
	functions.  Test for this and adjust our usage accordingly.

	* configure.ac
	* src/script/javascript.cpp

2010-09-18 Braden McDaniel  <braden@endoframe.com>

	* src/Makefile.am (EXTRA_DIST): Fixed directory for openvrml-gl.rc
	and openvrml-gl.vcxproj.

2010-09-18 Braden McDaniel  <braden@endoframe.com>

	SpiderMonkey included in the forthcoming XULRunner 1.9.3 includes
	changes to the JSPropertyOp function signature: a parameter that
	was a jsval in previous versions is now a jsid.  Test for this and
	adjust our usage accordingly.

	* configure.ac
	* src/script/javascript.cpp

2010-09-15 Braden McDaniel  <braden@endoframe.com>

	* src/script/javascript.cpp: JS_NewDouble is deprecated; use
	JS_NewNumberValue instead.

2010-09-15 Braden McDaniel  <braden@endoframe.com>

	* src/script/javascript.cpp: JS_NewDoubleValue is deprecated; use
	JS_NewNumberValue instead.

2010-09-14 Braden McDaniel  <braden@endoframe.com>

	* data/component/shape.xml: Added missing descriptions of
	LineProperties and FillProperties.

2010-09-13 Braden McDaniel  <braden@endoframe.com>

	Add (partially) parsed nodes to the scene in the event of an
	exception during parsing; ensure that the browser::initialized
	event gets send and scene::scene_loaded gets called in the event
	of an exception during parsing.
