@@ -1,3 +1,12 @@
+2011-01-22 Braden McDaniel  <braden@endoframe.com>
+
+	SpiderMonkey included in the forthcoming XULRunner 2.0 changes the
+	return value of JSVAL_TO_DOUBLE to a double (instead of a
+	pointer).
+
+	* configure.ac
+	* src/script/javascript.cpp
+
 2010-11-01 Braden McDaniel  <braden@endoframe.com>
 
 	Boost.Filesystem headers include inline functions that call
